src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Manager_frm__c</fullName>
        <description>Manager</description>
        <formula>HYPERLINK(  ManagerId , Manager.LastName +&apos;,&apos;+ Manager.FirstName +&apos; &apos;+ Manager.MiddleName   )</formula>
        <label>Manager</label>
        <type>Text</type>
    </fields>	
	<fields>
        <fullName>Unique_id__c</fullName>
        <externalId>true</externalId>
        <label>Unique_id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>organizational_unit_id__c</fullName>
        <description>stores the organizational Unit Code</description>
        <label>Organizational unit code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>organizational_unit_name__c</fullName>
        <description>Saves the name of the organizational unit</description>
        <label>Organizational unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>portfolio_classification_id__c</fullName>
        <description>is the portafolio code</description>
        <label>Portfolio code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prof_position_id__c</fullName>
        <description>Id for the user position</description>
        <label>Position code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>prof_position_type__c</fullName>
        <description>Is the name of Position</description>
        <label>Position</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <description>this field is used as external code for the user</description>
        <externalId>true</externalId>
        <label>User code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>Organizational_unit_code_equivalence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organizational unit code equivalence</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organizational_unit_equivalence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Organizational unit equivalence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
	<fields>
        <fullName>User_position_equivalence__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>User position equivalence</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>